syntax = "proto3";

package tweetpb;

import "google/api/annotations.proto";

message TweetUserRequest{
    string tweet = 1;
    CommonRequest common_request = 2;
}

message CommonResponse{
    string message = 1;
    int32 code = 2;
    string data = 3;
}

message CommonRequest{
    string access_token  = 1;
}

message TweetListResponse{
    repeated TweetList tweet_list = 1;
}

message TweetList{
    string tweet = 1;
    string tweet_id = 2;
}

message DeleteTweetRequest {
    string tweet_id = 1;
    CommonRequest common_request = 2;
}

service TweetService{
    rpc TweetCreate(TweetUserRequest) returns (CommonResponse){
        option (google.api.http) = {
            post: "/v1/user/tweet"
            body: "*"
		};
    };
    // tweet list
    rpc TweetList(CommonRequest) returns (TweetListResponse){
        option (google.api.http) = {
            get: "/v1/user/list/tweet"
		};
    };
    // delete tweet
    rpc DeleteTweet(DeleteTweetRequest) returns (CommonResponse){
        option (google.api.http) = {
            delete: "/v1/user/tweet"
		};
    };
}